force-app/main/default/objects/Deal__c/fields/aaatest__c.field-meta.xml
<CustomField>
    <fullName>aaatest__c</fullName>
    <label>aaatest</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>