force-app/main/default/objects/Deal__c/fields/Accomodation_Type__c.field-meta.xml
<CustomField>
    <fullName>Accomodation_Type__c</fullName>
    <label>Accomodation Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Resort</fullName>
            </value>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Glamping</fullName>
            </value>
            <value>
                <fullName>Camping</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Cruise</fullName>
            </value>
            <value>
                <fullName>Lodge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>