force-app/main/default/objects/Deal__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <label>Account Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heather McKenzie</fullName>
            </value>
            <value>
                <fullName>Sebastian Watsford</fullName>
            </value>
            <value>
                <fullName>Elena Fini</fullName>
            </value>
            <value>
                <fullName>Ayu Herawati</fullName>
            </value>
            <value>
                <fullName>Rahayu Krisna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>