force-app/main/default/objects/Deal__c/fields/Activities__c.field-meta.xml
<CustomField>
    <fullName>Activities__c</fullName>
    <label>Activities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nature</fullName>
            </value>
            <value>
                <fullName>Adventure</fullName>
            </value>
            <value>
                <fullName>Relaxation</fullName>
            </value>
            <value>
                <fullName>Food and Wine</fullName>
            </value>
            <value>
                <fullName>Cultural</fullName>
            </value>
            <value>
                <fullName>Wildlife</fullName>
            </value>
            <value>
                <fullName>Ski</fullName>
            </value>
            <value>
                <fullName>Sail</fullName>
            </value>
            <value>
                <fullName>Surf</fullName>
            </value>
            <value>
                <fullName>Hiking</fullName>
            </value>
            <value>
                <fullName>Cooking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>