force-app/main/default/objects/Deal__c/fields/Add_On_Report__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Report__c</fullName>
    <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;,
&quot;/lightning/r/00O2x0000041raT/view?fv0=&quot;,
&quot;/00O2x0000041raT?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Add On Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Add On Report</label>
    <type>Text</type>
</CustomField>