force-app/main/default/objects/Deal__c/fields/Add_Services_By_Land_Op__c.field-meta.xml
<CustomField>
    <fullName>Add_Services_By_Land_Op__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is to be used to indicate where a package includes additional services such as flights/train tickets etc that are ticketed by our land operators, and not our Flights/Logistics team.</inlineHelpText>
    <label>Add. Services By Land Op</label>
    <type>Checkbox</type>
</CustomField>