force-app/main/default/objects/Deal__c/fields/Add_Services_By_Land_Op_Comments__c.field-meta.xml
<CustomField>
    <fullName>Add_Services_By_Land_Op_Comments__c</fullName>
    <inlineHelpText>If &quot;Add. Services By Land Op&quot; is checked then please advise the specific services provided and who is providing them in relation to the deal.</inlineHelpText>
    <label>Add. Services By Land Op - Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>