force-app/main/default/objects/Deal__c/fields/Additional_Charges__c.field-meta.xml
<CustomField>
    <fullName>Additional_Charges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>* Additional Charges</label>
    <type>Checkbox</type>
</CustomField>