force-app/main/default/objects/Deal__c/fields/Agent_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Agent_Email_Address__c</fullName>
    <label>Agent Email Address</label>
    <length>34</length>
    <type>Text</type>
</CustomField>