force-app/main/default/objects/Deal__c/fields/Agent_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Agent_Image_URL__c</fullName>
    <description>Used to pull agents logo onto deal pdf</description>
    <label>Agent Image URL</label>
    <length>250</length>
    <type>Text</type>
</CustomField>