force-app/main/default/objects/Deal__c/fields/Agent_Names__c.field-meta.xml
<CustomField>
    <fullName>Agent_Names__c</fullName>
    <formula>Agents__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Name</label>
    <type>Text</type>
</CustomField>