force-app/main/default/objects/Deal__c/fields/Agent_Phone__c.field-meta.xml
<CustomField>
    <fullName>Agent_Phone__c</fullName>
    <label>Agent Phone</label>
    <length>24</length>
    <type>Text</type>
</CustomField>