force-app/main/default/objects/Deal__c/fields/Agents__c.field-meta.xml
<CustomField>
    <fullName>Agents__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To be used as a lookup for agents to generate deal pdf</description>
    <label>Agents</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal (Account)</relationshipLabel>
    <relationshipName>Deal1</relationshipName>
    <type>Lookup</type>
</CustomField>