force-app/main/default/objects/Deal__c/fields/Allocation_By_NZ__c.field-meta.xml
<CustomField>
    <fullName>Allocation_By_NZ__c</fullName>
    <label>Allocation By - NZ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deal</fullName>
                <default>true</default>
                <label>Deal</label>
            </value>
            <value>
                <fullName>Option</fullName>
            </value>
            <value>
                <fullName>Sub option</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>