force-app/main/default/objects/Deal__c/fields/Analyst_Deal_Option_Report__c.field-meta.xml
<CustomField>
    <fullName>Analyst_Deal_Option_Report__c</fullName>
    <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;, 
&quot;/lightning/r/00O0K00000AOpm5/view?fv0=&quot;, 
&quot;/00O0K00000AOpm5?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Sales by Option Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Analyst Deal Option Report</label>
    <type>Text</type>
</CustomField>