force-app/main/default/objects/Deal__c/fields/Analyst_finalized__c.field-meta.xml
<CustomField>
    <fullName>Analyst_finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Analyst finalized</label>
    <type>Checkbox</type>
</CustomField>