force-app/main/default/objects/Deal__c/fields/Approval_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Approval_Submitter__c</fullName>
    <inlineHelpText>This is the email address of approval process submitter</inlineHelpText>
    <label>Approval Submitter</label>
    <type>Email</type>
</CustomField>