force-app/main/default/objects/Deal__c/fields/Arrival_Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Airport_Code__c</fullName>
    <label>Arrival Airport Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>