force-app/main/default/objects/Deal__c/fields/Authorised_Merchant_Name__c.field-meta.xml
<CustomField>
    <fullName>Authorised_Merchant_Name__c</fullName>
    <description>Required to get the Signers name over from contact for esign</description>
    <label>Authorised Merchant Name</label>
    <length>24</length>
    <type>Text</type>
</CustomField>