force-app/main/default/objects/Deal__c/fields/Available_Dates_From__c.field-meta.xml
<CustomField>
    <fullName>Available_Dates_From__c</fullName>
    <label>Available Dates From</label>
    <type>Date</type>
</CustomField>