force-app/main/default/objects/Deal__c/fields/Available_Dates_To__c.field-meta.xml
<CustomField>
    <fullName>Available_Dates_To__c</fullName>
    <label>Available Dates To</label>
    <type>Date</type>
</CustomField>