force-app/main/default/objects/Deal__c/fields/BC_Required__c.field-meta.xml
<CustomField>
    <fullName>BC_Required__c</fullName>
    <defaultValue>&apos;No&apos;</defaultValue>
    <label>BC Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>