force-app/main/default/objects/Deal__c/fields/BDM__c.field-meta.xml
<CustomField>
    <fullName>BDM__c</fullName>
    <label>BDM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maite De Hedervary</fullName>
            </value>
            <value>
                <fullName>Silvia Magnani</fullName>
            </value>
            <value>
                <fullName>Teige O&apos;Sullivan</fullName>
            </value>
            <value>
                <fullName>Alison Riordan</fullName>
            </value>
            <value>
                <fullName>Eamonn O&apos;Sullivan</fullName>
            </value>
            <value>
                <fullName>Rebecca Maitland</fullName>
            </value>
            <value>
                <fullName>Andrew Bennett</fullName>
            </value>
            <value>
                <fullName>Holly Littlewood</fullName>
            </value>
            <value>
                <fullName>Nicoline Dolman</fullName>
            </value>
            <value>
                <fullName>Emily Taylor</fullName>
            </value>
            <value>
                <fullName>Alanna Betz</fullName>
            </value>
            <value>
                <fullName>Ben Ellison</fullName>
            </value>
            <value>
                <fullName>Luke Hansell</fullName>
            </value>
            <value>
                <fullName>Laura Newman</fullName>
            </value>
            <value>
                <fullName>Peter Huff</fullName>
            </value>
            <value>
                <fullName>Lexi Graham</fullName>
            </value>
            <value>
                <fullName>Ayu Herawati</fullName>
            </value>
            <value>
                <fullName>Brett Lemish</fullName>
            </value>
            <value>
                <fullName>Pete Timbs</fullName>
            </value>
            <value>
                <fullName>Serena Brillanti</fullName>
            </value>
            <value>
                <fullName>Angelina Hackett</fullName>
            </value>
            <value>
                <fullName>Jeremy Hagan</fullName>
            </value>
            <value>
                <fullName>Paul Wards</fullName>
            </value>
            <value>
                <fullName>Trent Ellen</fullName>
            </value>
            <value>
                <fullName>Alexandra Chakos</fullName>
                <isActive>false</isActive>
                <label>Alexandra Chakos</label>
            </value>
            <value>
                <fullName>Amanda Tennant</fullName>
                <isActive>false</isActive>
                <label>Amanda Tennant</label>
            </value>
            <value>
                <fullName>Cameron Williams</fullName>
                <isActive>false</isActive>
                <label>Cameron Williams</label>
            </value>
            <value>
                <fullName>Chaiy Donati</fullName>
                <isActive>false</isActive>
                <label>Chaiy Donati</label>
            </value>
            <value>
                <fullName>Derek Test Dolan</fullName>
                <isActive>false</isActive>
                <label>Derek Test Dolan</label>
            </value>
            <value>
                <fullName>Ella Dixon</fullName>
                <isActive>false</isActive>
                <label>Ella Dixon</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>