force-app/main/default/objects/Deal__c/fields/BDM_Allocation_Report__c.field-meta.xml
<CustomField>
    <fullName>BDM_Allocation_Report__c</fullName>
    <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;, 
&quot;/lightning/r/00O0K00000AOmWT/view?fv0=&quot;, 
&quot;/00O0K00000AOmWT?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Allocation Report&quot;)</formula>
    <label>BDM Allocation Report</label>
    <type>Text</type>
</CustomField>