force-app/main/default/objects/Deal__c/fields/BDM_Deal_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>BDM_Deal_Snapshot__c</fullName>
    <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;, 
&quot;/lightning/r/00O0K00000AXKyl/view?fv0=&quot;, 
&quot;/00O0K00000AXKyl?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Deal Snapshot&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BDM Deal Snapshot</label>
    <type>Text</type>
</CustomField>