force-app/main/default/objects/Deal__c/fields/BDM_Dep_City_Report__c.field-meta.xml
<CustomField>
    <fullName>BDM_Dep_City_Report__c</fullName>
    <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;, 
&quot;/lightning/r/00O0K00000AOpjk/view?fv0=&quot;, 
&quot;/00O0K00000AOpjk?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Sales by Dep City Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Analyst Dep City Report</label>
    <type>Text</type>
</CustomField>