force-app/main/default/objects/Deal__c/fields/BDM_finalized__c.field-meta.xml
<CustomField>
    <fullName>BDM_finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BDM finalized</label>
    <type>Checkbox</type>
</CustomField>