force-app/main/default/objects/Deal__c/fields/BDM_Merchant_Sales_Overview__c.field-meta.xml
<CustomField>
    <fullName>BDM_Merchant_Sales_Overview__c</fullName>
    <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;, 
&quot;/lightning/r/00O0K000009sxnS/view?fv0=&quot;, 
&quot;/00O0K000009sxnS?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Merchant Overview Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BDM Merchant Sales Overview</label>
    <type>Text</type>
</CustomField>