force-app/main/default/objects/Deal__c/fields/BDM_Sales_POE_Report_del__c.field-meta.xml
<CustomField>
    <fullName>BDM_Sales_POE_Report_del__c</fullName>
    <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;,
&quot;/lightning/r/00O2x000002BXWY/view?fv0=&quot;,
&quot;/00O2x000002BXWY?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Sales (POE)Report&quot;)</formula>
    <label>BDM Sales (POE) Report</label>
    <type>Text</type>
</CustomField>