force-app/main/default/objects/Deal__c/fields/BDM_Sales_Report__c.field-meta.xml
<CustomField>
    <fullName>BDM_Sales_Report__c</fullName>
    <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;, 
&quot;/lightning/r/00O0K00000A4vS4/view?fv0=&quot;, 
&quot;/00O0K00000A4vS4?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Sales Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BDM Sales Report</label>
    <type>Text</type>
</CustomField>