force-app/main/default/objects/Deal__c/fields/BNCDL__c.field-meta.xml
<CustomField>
    <fullName>BNCDL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BNCDL</label>
    <type>Checkbox</type>
</CustomField>