force-app/main/default/objects/Deal__c/fields/BNCDL_BBD_1_Week__c.field-meta.xml
<CustomField>
    <fullName>BNCDL_BBD_1_Week__c</fullName>
    <formula>BNCDL_BBD__c - 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BNCDL BBD - 1 Week</label>
    <type>Date</type>
</CustomField>