force-app/main/default/objects/Deal__c/fields/BNCDL_BBD_4_Weeks__c.field-meta.xml
<CustomField>
    <fullName>BNCDL_BBD_4_Weeks__c</fullName>
    <formula>BNCDL_BBD__c - ((365/52)*4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BNCDL BBD - 4 Weeks</label>
    <type>Date</type>
</CustomField>