force-app/main/default/objects/Deal__c/fields/BNCDL_BBD_4_Weeks_Comms__c.field-meta.xml
<CustomField>
    <fullName>BNCDL_BBD_4_Weeks_Comms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BNCDL BBD - 4 Weeks Comms</label>
    <type>Checkbox</type>
</CustomField>