force-app/main/default/objects/Deal__c/fields/BNCDL_BBD__c.field-meta.xml
<CustomField>
    <fullName>BNCDL_BBD__c</fullName>
    <label>BNCDL BBD</label>
    <type>Date</type>
</CustomField>