force-app/main/default/objects/Deal__c/fields/Book_By__c.field-meta.xml
<CustomField>
    <fullName>Book_By__c</fullName>
    <label>Book By</label>
    <type>Date</type>
</CustomField>