force-app/main/default/objects/Deal__c/fields/Book_By_nz__c.field-meta.xml
<CustomField>
    <fullName>Book_By_nz__c</fullName>
    <label>Book By - NZ</label>
    <type>Date</type>
</CustomField>