force-app/main/default/objects/Deal__c/fields/Booking_Instructions_Address__c.field-meta.xml
<CustomField>
    <fullName>Booking_Instructions_Address__c</fullName>
    <label>Booking Instructions(Address)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>