force-app/main/default/objects/Deal__c/fields/Booking_Instructions_Stay__c.field-meta.xml
<CustomField>
    <fullName>Booking_Instructions_Stay__c</fullName>
    <label>Booking Instructions(Stay)</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>