force-app/main/default/objects/Deal__c/fields/Booking_Instructions_Stay_NZ__c.field-meta.xml
<CustomField>
    <fullName>Booking_Instructions_Stay_NZ__c</fullName>
    <label>Booking Instructions (Stay) - NZ</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>