force-app/main/default/objects/Deal__c/fields/Booking_Instructions_Stay_rich__c.field-meta.xml
<CustomField>
    <fullName>Booking_Instructions_Stay_rich__c</fullName>
    <label>Booking Instructions(Stay)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>