force-app/main/default/objects/Deal__c/fields/Booking_Instructions_URL__c.field-meta.xml
<CustomField>
    <fullName>Booking_Instructions_URL__c</fullName>
    <label>Booking Instructions URL</label>
    <type>Url</type>
</CustomField>