force-app/main/default/objects/Deal__c/fields/built_in_stop_over__c.field-meta.xml
<CustomField>
    <fullName>built_in_stop_over__c</fullName>
    <formula>Deal_Draft__r.built_in_stop_over__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If a Stop Over has been built into the deal as part of the standard itinerary then this check box is checked - see Deal Draft for original check box.</inlineHelpText>
    <label>Built In Stop Over</label>
    <type>Checkbox</type>
</CustomField>