force-app/main/default/objects/Deal__c/fields/Calendar__c.field-meta.xml
<CustomField>
    <fullName>Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calendar</label>
    <type>Checkbox</type>
</CustomField>