force-app/main/default/objects/Deal__c/fields/campaign2__c.field-meta.xml
<CustomField>
    <fullName>campaign2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>campaign2</label>
    <referenceTo>campaign__c</referenceTo>
    <relationshipLabel>Deal (campaign2)</relationshipLabel>
    <relationshipName>Deal1</relationshipName>
    <type>Lookup</type>
</CustomField>