force-app/main/default/objects/Deal__c/fields/campaign3__c.field-meta.xml
<CustomField>
    <fullName>campaign3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>campaign3</label>
    <referenceTo>campaign__c</referenceTo>
    <relationshipLabel>Deal (campaign3)</relationshipLabel>
    <relationshipName>Deal2</relationshipName>
    <type>Lookup</type>
</CustomField>