force-app/main/default/objects/Deal__c/fields/campaign__c.field-meta.xml
<CustomField>
    <fullName>campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>campaign</label>
    <referenceTo>campaign__c</referenceTo>
    <relationshipLabel>Deal</relationshipLabel>
    <relationshipName>Deal</relationshipName>
    <type>Lookup</type>
</CustomField>