force-app/main/default/objects/Deal__c/fields/Cancellation_Advice__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Advice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancellation Advice</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>User</relationshipName>
    <type>Lookup</type>
</CustomField>