force-app/main/default/objects/Deal__c/fields/category__c.field-meta.xml
<CustomField>
    <fullName>category__c</fullName>
    <label>Hero Field Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>travel</fullName>
                <default>true</default>
                <label>travel</label>
            </value>
            <value>
                <fullName>cruise</fullName>
            </value>
            <value>
                <fullName>stay</fullName>
            </value>
            <value>
                <fullName>recommended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>