force-app/main/default/objects/Deal__c/fields/category_nz__c.field-meta.xml
<CustomField>
    <fullName>category_nz__c</fullName>
    <label>Hero Field Category - NZ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>travel</fullName>
            </value>
            <value>
                <fullName>cruise</fullName>
            </value>
            <value>
                <fullName>stay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>