force-app/main/default/objects/Deal__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <label>Channel Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Siteminder</fullName>
                <default>true</default>
                <label>Siteminder</label>
            </value>
            <value>
                <fullName>TravelClick</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>