force-app/main/default/objects/Deal__c/fields/Child_Age_Disclaimer_NZ__c.field-meta.xml
<CustomField>
    <fullName>Child_Age_Disclaimer_NZ__c</fullName>
    <label>Child Age Disclaimer - NZ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>