force-app/main/default/objects/Deal__c/fields/Climate__c.field-meta.xml
<CustomField>
    <fullName>Climate__c</fullName>
    <label>Climate</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Tropical</fullName>
            </value>
            <value>
                <fullName>Temperate</fullName>
            </value>
            <value>
                <fullName>Snow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>