force-app/main/default/objects/Deal__c/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>Deal</relationshipLabel>
    <relationshipName>Deal</relationshipName>
    <type>Lookup</type>
</CustomField>