force-app/main/default/objects/Deal__c/fields/Closest_Partner_Real_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Closest_Partner_Real_End_Date__c</fullName>
    <label>Closest Partner Real End Date</label>
    <type>Date</type>
</CustomField>