force-app/main/default/objects/Deal__c/fields/Continent_NZ__c.field-meta.xml
<CustomField>
    <fullName>Continent_NZ__c</fullName>
    <label>Continent - NZ</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>The Caribbean</fullName>
            </value>
            <value>
                <fullName>Central America</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>South America</fullName>
            </value>
            <value>
                <fullName>Oceania (incl. Australia)</fullName>
            </value>
            <value>
                <fullName>Antarctica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>