force-app/main/default/objects/Deal__c/fields/Count_No_Of_Days_Live__c.field-meta.xml
<CustomField>
    <fullName>Count_No_Of_Days_Live__c</fullName>
    <formula>TODAY() -  Deal_Open_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count No Of Days Live</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>